--- a/Idle-Factory-Info.plist
+++ b/Idle-Factory-Info.plist
@@ -2,6 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+        <string>Need acess</string>
+    
 	<key>UIAppFonts</key>
 	<array>
 		<string>Austral-Slab_Blur-Regular.otf</string>
